--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
+attrs==22.1.0
 click==7.1.2
+exceptiongroup==1.0.1
+flake8==5.0.4
 Flask==1.1.2
+iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mccabe==0.7.0
+packaging==21.3
+pluggy==1.0.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pyparsing==3.0.9
+pytest==7.2.0
+pytest-flask==1.2.0
+tomli==2.0.1
 Werkzeug==1.0.1
