--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
+async-generator==1.10
 attrs==22.1.0
+certifi==2022.9.24
 click==7.1.2
 exceptiongroup==1.0.1
 flake8==5.0.4
 Flask==1.1.2
+h11==0.14.0
+idna==3.4
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mccabe==0.7.0
+outcome==1.2.0
 packaging==21.3
 pluggy==1.0.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 pyparsing==3.0.9
+PySocks==1.7.1
 pytest==7.2.0
 pytest-flask==1.2.0
+selenium==4.6.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 tomli==2.0.1
+trio==0.22.0
+trio-websocket==0.9.2
+urllib3==1.26.12
 Werkzeug==1.0.1
+wsproto==1.2.0
