--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 ConfigArgParse==1.5.3
+coverage==6.5.0
 exceptiongroup==1.0.1
 flake8==5.0.4
 Flask==2.2.2
@@ -32,6 +33,7 @@ pyflakes==2.5.0
 pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.2.0
+pytest-cov==4.0.0
 pytest-flask==1.2.0
 pyzmq==24.0.1
 requests==2.28.1
